--- a/ex10/pom.xml
+++ b/ex10/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com</groupId>
 	<artifactId>ex10</artifactId>
@@ -16,6 +15,7 @@
 	<description>Demo project for Spring Boot with Maven</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<env>local</env>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -33,10 +33,10 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		 <dependency>
-	<groupId>org.springframework.boot</groupId>
-	<artifactId>spring-boot-starter-web</artifactId>
-</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -55,6 +55,41 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+			
+			<resource>
+				<directory>src/main/resources</directory> <!--공통 Resource 자료들-->
+			</resource>
+			<resource>
+				<directory>src/main/resources-${env}</directory> <!--Profile 구분-->
+			</resource>
+		</resources>
+		<!--
+		<testResources>
+            <testResource>
+                <directory>src/test/resources-${env}</directory>
+            </testResource>
+        </testResources>-->
 	</build>
 
+	<profiles>
+		<profile>
+			<id>local</id>
+			<properties>
+				<env>local</env>
+			</properties>
+		</profile>
+		<profile>
+			<id>dev</id>
+			<properties>
+				<env>dev</env>
+			</properties>
+		</profile>
+		<profile>
+			<id>real</id>
+			<properties>
+				<env>real</env>
+			</properties>
+		</profile>
+	</profiles>
 </project>
