09151445 pom.xml 수정 2

--- a/ex10/pom.xml
+++ b/ex10/pom.xml
@@ -75,6 +75,9 @@
 	<profiles>
 		<profile>
 			<id>local</id>
+			<!--<activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>-->
 			<properties>
 				<env>local</env>
 			</properties>
