--- a/ex10/bin/pom.xml
+++ b/ex10/bin/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>com</groupId>
 	<artifactId>ex10</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>ex10</name>
 	<description>Demo project for Spring Boot with Maven</description>
 	<properties>
@@ -18,11 +18,6 @@
 		<env>local</env>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-tomcat</artifactId>
-			<scope>provided</scope>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
